# boids-ecs

./: .gitignore  .gitmodules  CMakeLists.txt
include/: ecs.h
src/engine/: adb.c  adb.h  engine.c  engine.h  kdtree.c  kdtree.h  ui.c  ui.h  vec.h
src/sim/: boid_c.c  boid_c.h  sim.c
